editor/css/stylesheet.css
/* ... */
  .w.treeContainer .subjectNameSpan
  {
    margin-left: 5px;
    font-weight: bold;
    font-size: 17px;
    line-height: 50px;
  }

  .w.treeContainer > div
  {
    display: table-row;
  }

    .w.treeContainer > div > div
    {
      display: table-cell;
    }

    .w.treeContainer > div:nth-child(2) > div
    {
      width: 100%;
      height: 100%;
    }

.treeDiv
{
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  user-select: none;
  position: relative;
  overflow: auto;
  width: 100%;
  height: 100%;
  background-color: white;
}

.treeDiv
{
  display: none;
}

.treeDiv.dragging {
  cursor: move;
}

.w.treeContainer.zoom .treeDiv
{
  display: block;
}

#properties.player > #headerComputer,
#properties.player > #headerSituation,
#properties.player > #treeSubject,
#properties.player > #jumpNode,
#properties.player > #initsNode,
#properties.player > #optionalSubject,
#properties.player > #characterSection
{
  display: none;
}

#properties.situation > #headerPlayer,
#properties.situation > #headerComputer,
#properties.situation > #treeSubject,
#properties.situation > #jumpNode,
#properties.situation > #initsNode,
#properties.situation > #optionalSubject,
#properties.situation > #characterSection
{
  display: none;
}

#properties.computer > #headerPlayer,
#properties.computer > #headerSituation,
#properties.computer > #treeSubject,
#properties.computer > #optionalSubject
{
  display: none;
}

#properties.tree > #headerPlayer,
#properties.tree > #headerComputer,
#properties.tree > #headerSituation,
#properties.tree > #preconditionsSection,
#properties.tree > #endNode,
#properties.tree > #initsNode,
#properties.tree > #jumpNode,
#properties.tree > #effectsSection,
#properties.tree > #propertyValuesSection,
#properties.tree > #characterSection,
#properties.tree > #commentSection
{
  display: none;
}

#statement, #comment, #treeNameBox
{
  display: block;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  width: 100%;
}

.hidden
{
  display: none !important;
}

.removedParameter
{
  display: none;
}

.sidebarSection
{
  padding-top: 5px;
  padding-bottom: 5px;
  border-top: 2px solid white;
}

  .sidebarSection.withMarginTop
  {
    margin-top: 5px;
  }

.groupPreconditionDiv
{
  margin: 0;
  margin-left: 12px;
  padding: 0;
  padding-left: 10px;
  border-left: 2px solid white;
}

.precondition > button
{
  display: block;
}

.precondition > .precondition-test-container + button
{
  display: inline-block;
}

.precondition > .emptyLabel,
.precondition > .singleLabel,
.precondition > .multipleLabel
{
  display: none;
}

.precondition.empty > .emptyLabel,
.precondition.single > .singleLabel,
.precondition.multiple > .multipleLabel
{
  display: block;
}

.groupPreconditionRadioDiv
{
  display: none;
}

.precondition.multiple > .groupPreconditionRadioDiv
{
  display: block;
}

.ui-accordion .ui-accordion-header
{
  margin-bottom: 0;
}

.ui-accordion .ui-accordion-content
{
    padding: 0.5em 1em !important;
}

.ui-widget
{
  font-size: inherit !important;
}

#preconditionsSection
{
  white-space: nowrap;
}

  #preconditionsSection > #preconditionsDiv > .precondition > .deleteParent
  {
    display: none;
  }

#scenarioNameTab
{
  display: inline-block;
  margin: 0;
  padding: 5px 0;
  background-color: #ecf0f1;
  color: #888;
  text-align: center;
  font-size: 1.3em;
  /*-moz-border-radius-topleft: 12px;
  -moz-border-radius-topright: 12px;
    display: inline-block;
    margin-left: 16px;
    padding: 4px 12px;
    -webkit-border-top-left-radius: 12px;
    border-top-left-radius: 12px;
    -webkit-border-top-right-radius: 12px;
    border-top-right-radius: 12px;
  background-color: rgba(255, 255, 255, 0.5);
  color: rgba(0, 0, 0, 0.5);
  font-size: 20px;*/
  margin-left: 265px;
  /*padding: 5px 40%;*/
  width: calc(100% - 300px);
}

  #scenarioNameTab span
  {
    margin: 3px 0;
    padding: 0 10px;
    min-width: 50px;
    height: 1em;
    color: #000;
  }

    #scenarioNameTab span:hover
    {
      background-color: #f8f8f8;
      color: #101010;
    }

    #scenarioNameTab span input[type=text]
    {
      height: 1em;
      font: inherit;
    }

.noSelect
{
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  user-select: none;
  /* IE10+ */
  /* mozilla browsers */
  /* webkit (konqueror) browsers */
  /* webkit (safari, chrome) browsers */
}

#tabDock #validationReport
{
  position: relative;
  display: none;
  overflow: auto;
  padding: 0 20px;
  max-height: 200px;
}

#validationReport > *
{
  margin: 20px 0;
}

#validationReport table
{
  width: 100%;
  border: 1px solid black;
  border-collapse: collapse;
  background-color: white;
  table-layout: fixed;
}

  #validationReport table td
  {
    padding: 5px;
    border: 1px solid black;
  }

  #validationReport table tr td:nth-child(1)
  {
    width: 15%;
  }

  #validationReport table tr td:nth-child(2)
  {
    width: 85%;
  }

  #validationReport .no-problems
  {
    color: green;
  }

  #validationReport .level-error
  {
    color: #F00;
  }

  #validationReport .level-warning
  {
    color: #F80;
  }

  #validationReport .level-info
  {
    color: #05F;
  }

/*.buttonSeperator
{
  position: relative;
    display: inline;
  margin: 0px 8px;
  width: 2px;
    height: 64px;
    background-color: black;
}*/

.buttonGroup
{
  display: inline-block;
  overflow: hidden;
  margin: 5px 1px;
  padding: 0;
  height: 78px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  border-radius: 5px;
  background-color: #ecf0f1;
  vertical-align: top;
  -ms-word-wrap: break-word;
  word-wrap: break-word;
  /*width: 400px;*/
}

  .buttonGroup::after
  {
    float: left;
    width: 100%;
    height: 7px;
    background-color: #8C9194;
    content: "";
  }
/* ... */

